--- a/testapp/.env
+++ b/testapp/.env
@@ -1,19 +1,12 @@
-# Give your application a unique name (no spaces)
 APP_NAME=testapp
 
-# false for production, true for development
 DEBUG=true
 
-# the port should we listen on
 PORT=4000
-
-# the server name, e.g, www.mysite.com
 SERVER_NAME=localhost
 
-# should we use https?
 SECURE=false
 
-# database config - postgres or mysql
 DATABASE_TYPE=postgres
 DATABASE_HOST=localhost
 DATABASE_PORT=5433
@@ -22,25 +15,20 @@ DATABASE_PASS=password
 DATABASE_NAME=goravel
 DATABASE_SSL_MODE=disable
 
-# redis config
 REDIS_HOST="localhost:6380"
 REDIS_PASSWORD=
 REDIS_PREFIX=goravel
 
-# cache (currently only redis)
 CACHE=redis
 
-# cooking seetings
 COOKIE_NAME=goravel
 COOKIE_LIFETIME=1440
 COOKIE_PERSIST=true
 COOKIE_SECURE=false
 COOKIE_DOMAIN=localhost
 
-# session store: cookie, redis, mysql, or postgres
 SESSION_TYPE=redis
 
-# mail settings
 SMTP_HOST=localhost
 SMTP_USERNAME=535314fc4423b2
 SMTP_PASSWORD=ffa2ce4e252d97
@@ -48,10 +36,7 @@ SMTP_PORT=1025
 SMTP_ENCRYPTION=none
 SMTP_FROM=me@here.com
 
-# mail settings for api services TODO
+# go or jet
+RENDERER=go
 
-# template engine: go or jet
-RENDERER=jet
-
-# the encryption key; must be exactly 32 characters long
 KEY=7w!z%C*F-JaNdRgUjXn2r5u8x/A?D(G+
