--- a/testapp/.env
+++ b/testapp/.env
@@ -9,10 +9,10 @@ SECURE=false
 
 DATABASE_TYPE=postgres
 DATABASE_HOST=localhost
-DATABASE_PORT=5433
-DATABASE_USER=postgres
-DATABASE_PASS=password
-DATABASE_NAME=goravel
+DATABASE_PORT=5432
+DATABASE_USER=admin
+DATABASE_PASS=admin
+DATABASE_NAME=postgres
 DATABASE_SSL_MODE=disable
 
 REDIS_HOST="localhost:6380"
