--- a/environment/docker-compose.yml
+++ b/environment/docker-compose.yml
@@ -1,4 +1,6 @@
 version: '3'
+volumes:
+  pgdata: #docker volume inspect environment_pgdata
 services:
   postgres:
     image: 'postgres'
@@ -9,7 +11,9 @@ services:
       POSTGRES_PASSWORD: admin
       POSTGRES_DB: postgres
     volumes:
-      - ./data/postgres/:/var/lib/postgresql/data/
+      - type: volume
+        source: pgdata
+        target: /var/lib/postgresql/data/
   redis:
     image: 'redis:alpine'
     ports:
